--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://github.com/Sameer345/cmad-shelby-motors",
+{"homepage": "https://sameer345.github.io/cmad-shelby-motors",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
